fix top bar background  on mobile

--- a/src/components/Wallet/TopBar/TopBar.scss
+++ b/src/components/Wallet/TopBar/TopBar.scss
@@ -287,6 +287,7 @@
             display: none;
             padding: 10px 10px;
             box-shadow: $box-shadow;
+            background-color: $background-color;
 
             .dropdown {
                 width: 100%;
